@@ -1,1 +1,1 @@
-1.8.7.0-rc2
+1.8.7.0
