@@ -1,3 +1,7 @@
+2011-09-23  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.7.0 Released.
+
 2011-09-19  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.7.0-rc2 Released.
